fixing the issue with mobile responsiveness: image and text of chat not visible for smaller devices

--- a/client/src/signin-signup.css
+++ b/client/src/signin-signup.css
@@ -108,7 +108,7 @@ form {
 
 @media only screen and (max-width: 599px) {
   .container {
-    height: 150%;
+    height: 250%;
   }
   .login-signup {
     justify-content: center !important;
